--- a/AfantazieServer/AfantazieServer/appsettings.ProdTemplate.json
+++ b/AfantazieServer/AfantazieServer/appsettings.ProdTemplate.json
@@ -1,4 +1,11 @@
 ﻿{
+  //"Kestrel": {
+  //  "Endpoints": {
+  //    "Http": {
+  //      "Url": "http://localhost:5010"
+  //    },
+  //  }
+  //},
   "ApplicationLanguage": "cz",
   "JwtSecurityKey": "???",
 
