At this point I'm loosing track. But let's see... - User profile mostly done (with new abstract egdes, which I'm not quite sure about) - Hashtags backend is buggy but mostly finished - MaxThoughtsOnScreen moved to graph controls - Titles visibility threshold, edge length, etc. ...

--- a/AfantazieServer/Afantazie.Presentation.Model/Afantazie.Presentation.Model.csproj
+++ b/AfantazieServer/Afantazie.Presentation.Model/Afantazie.Presentation.Model.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Afantazie.Core.Constants\Afantazie.Core.Constants.csproj" />
     <ProjectReference Include="..\Afantazie.Core.Model\Afantazie.Core.Model.csproj" />
   </ItemGroup>
 
