--- a/AfantazieServer/Afantazie.Core.Localization/Afantazie.Core.Localization.csproj
+++ b/AfantazieServer/Afantazie.Core.Localization/Afantazie.Core.Localization.csproj
@@ -14,6 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Afantazie.Core.Constants\Afantazie.Core.Constants.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Colors.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
