--- a/AfantazieServer/Afantazie.Core.Model/Afantazie.Core.Model.csproj
+++ b/AfantazieServer/Afantazie.Core.Model/Afantazie.Core.Model.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Afantazie.Core.Constants\Afantazie.Core.Constants.csproj" />
     <ProjectReference Include="..\Afantazie.Core.Localization\Afantazie.Core.Localization.csproj" />
   </ItemGroup>
 
