--- a/AfantazieServer/AfantazieServer/Properties/launchSettings.json
+++ b/AfantazieServer/AfantazieServer/Properties/launchSettings.json
@@ -44,6 +44,14 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "Mobile-dev": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:5001;http://localhost:5000;http://0.0.0.0:5000",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+     
     }
   }
 }
