--- a/AfantazieWeb/package.json
+++ b/AfantazieWeb/package.json
@@ -1,10 +1,11 @@
 {
   "name": "afantazie",
   "private": true,
-  "version": "0.0.197",
+  "version": "0.0.198",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "mobile-dev": "vite --host",
     "build": "npm run generate-meta-tag && tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
