--- a/AfantazieServer/AfantazieServer/appsettings.DevTemplate.json
+++ b/AfantazieServer/AfantazieServer/appsettings.DevTemplate.json
@@ -16,4 +16,7 @@
   },
   "ApplicationLanguage": "cz",
   "JwtSecurityKey": "DEV_DEV_DEV_DEV_DEV_DEV_DEV_DEV_DEV_DEV_DEV_DEV_DEV_DEV_DEV_DEV",
+  "ConnectionStrings":{
+    "DefaultConnection": "???"
+  }
 }
