--- a/.gitignore
+++ b/.gitignore
@@ -613,3 +613,4 @@ Secondary_files/cytoscape.js-euler-master/cytoscape.js-euler-master
 /AfantazieServer/AfantazieServer/appsettings.Production.json
 /AfantazieServer/AfantazieServer/appsettings.Development.json
 /AfantazieServer/.vscode/
+AfantazieWeb/dist_backup/*
