--- a/.gitignore
+++ b/.gitignore
@@ -613,45 +613,4 @@ Secondary_files/cytoscape.js-euler-master/cytoscape.js-euler-master
 /AfantazieServer/AfantazieServer/appsettings.Production.json
 /AfantazieServer/AfantazieServer/appsettings.Development.json
 /AfantazieServer/.vscode/
-AfantazieWeb/dist_backup/four_dots.png
-AfantazieWeb/dist_backup/index.html
-AfantazieWeb/dist_backup/meta.json
-AfantazieWeb/dist_backup/assets/index-BU8e1Ssb.css
-AfantazieWeb/dist_backup/assets/index-C7qhr3Em.js
-AfantazieWeb/dist_backup/icons/backward_black.svg
-AfantazieWeb/dist_backup/icons/backward_white.svg
-AfantazieWeb/dist_backup/icons/bell.svg
-AfantazieWeb/dist_backup/icons/close.svg
-AfantazieWeb/dist_backup/icons/delete.svg
-AfantazieWeb/dist_backup/icons/eye.svg
-AfantazieWeb/dist_backup/icons/filter_black.svg
-AfantazieWeb/dist_backup/icons/filter_white.svg
-AfantazieWeb/dist_backup/icons/flag.svg
-AfantazieWeb/dist_backup/icons/forward_black.svg
-AfantazieWeb/dist_backup/icons/forward_white.svg
-AfantazieWeb/dist_backup/icons/fullscreen.svg
-AfantazieWeb/dist_backup/icons/help-circle.svg
-AfantazieWeb/dist_backup/icons/home.svg
-AfantazieWeb/dist_backup/icons/menu.svg
-AfantazieWeb/dist_backup/icons/message-square.svg
-AfantazieWeb/dist_backup/icons/minimize.svg
-AfantazieWeb/dist_backup/icons/muffin.svg
-AfantazieWeb/dist_backup/icons/neighborhood_black_2.svg
-AfantazieWeb/dist_backup/icons/neighborhood_black.svg
-AfantazieWeb/dist_backup/icons/neighborhood_white_2.svg
-AfantazieWeb/dist_backup/icons/neighborhood_white.svg
-AfantazieWeb/dist_backup/icons/options_black.svg
-AfantazieWeb/dist_backup/icons/options_white.svg
-AfantazieWeb/dist_backup/icons/pause_black.svg
-AfantazieWeb/dist_backup/icons/pause_white.svg
-AfantazieWeb/dist_backup/icons/play-forward.svg
-AfantazieWeb/dist_backup/icons/record_black.svg
-AfantazieWeb/dist_backup/icons/record_white.svg
-AfantazieWeb/dist_backup/icons/reply.svg
-AfantazieWeb/dist_backup/icons/rewind_black.svg
-AfantazieWeb/dist_backup/icons/rewind_white.svg
-AfantazieWeb/dist_backup/icons/setting_black.svg
-AfantazieWeb/dist_backup/icons/setting_white.svg
-AfantazieWeb/dist_backup/icons/user.svg
-AfantazieWeb/dist_backup/icons/zoom-in.svg
-AfantazieWeb/dist_backup/icons/zoom-out.svg
+AfantazieWeb/dist_backup/*
