--- a/.gitignore
+++ b/.gitignore
@@ -605,3 +605,4 @@ sketch
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,csharp,dotnetcore,react
+aphantasia_server/.vscode/settings.json
