--- a/aphantasia_server/Aphant.Boot.WebServer/Aphant.Boot.WebServer.csproj
+++ b/aphantasia_server/Aphant.Boot.WebServer/Aphant.Boot.WebServer.csproj
@@ -13,21 +13,6 @@
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
   </ItemGroup>
 
-  <!-- <ItemGroup> -->
-    <!-- <ProjectReference Include="../Aphantasia.Service.GraphLayout/Aphantasia.Service.GraphLayout.csproj" />
-    <ProjectReference Include="..\Aphantasia.Core.Localization\Aphantasia.Core.Localization.csproj" />
-    <ProjectReference Include="..\Aphantasia.Data.Repository\Aphantasia.Data.Repository.csproj" />
-    <ProjectReference Include="..\Aphantasia.Presentation.Api\Aphantasia.Presentation.Api.csproj" />
-    <ProjectReference Include="..\Aphantasia.Service.Authentication\Aphantasia.Service.Auth.csproj" />
-    <ProjectReference Include="..\Aphantasia.Service.Interface.Authentication\Aphantasia.Service.Interface.Authentication.csproj" />
-    <ProjectReference Include="..\Aphantasia.Service.Profiles\Aphantasia.Service.Profiles.csproj" />
-    <ProjectReference Include="..\Aphantasia.Service.SiteActivity\Aphantasia.Service.SiteActivity.csproj" />
-    <ProjectReference Include="..\Aphantasia.Service.Thoughts\Aphantasia.Service.Thoughts.csproj" />
-    <ProjectReference Include="..\Aphantasia.Services.Chat\Aphantasia.Service.Chat.csproj" />
-    <ProjectReference Include="..\Aphantasia.Services.UserSettings\Aphantasia.Service.UserSettings.csproj" />
-    <ProjectReference Include="..\Aphantasia.Services.GraphLayout\Aphantasia.Service.GraphLayout.csproj" /> -->
-  <!-- </ItemGroup> -->
-
   <ItemGroup>
     <Content Update="appsettings.Production.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -45,7 +30,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Aphant.Client.WebApi\Aphant.Client.WebApi.csproj" />
-    <ProjectReference Include="..\Aphant.Impl.Database.Repo\Aphant.Impl.Database.Repo.csproj" />
+    <ProjectReference Include="..\Aphant.Impl.DbRepository\Aphant.Impl.DbRepository.csproj" />
     <ProjectReference Include="..\Aphant.Impl.Logic\Aphant.Impl.Logic.csproj" />
     <ProjectReference Include="..\Aphant.Impl.Auth\Aphant.Impl.Auth.csproj" />
   </ItemGroup>
