--- a/aphantasia_server/Aphant.Impl.Auth/Aphant.Impl.Auth.csproj
+++ b/aphantasia_server/Aphant.Impl.Auth/Aphant.Impl.Auth.csproj
@@ -2,11 +2,16 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Aphant.Core.Interface\Aphant.Core.Interface.csproj" />
+    <ProjectReference Include="..\Aphant.Core.Database\Aphant.Core.Database.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.9" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.2" />
+    <PackageReference Include="Microsoft.IdentityModel" Version="7.0.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.15.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
   </ItemGroup>
 
   <PropertyGroup>
