--- a/aphantasia_server/Aphant.Client.WebApi/Aphant.Client.WebApi.csproj
+++ b/aphantasia_server/Aphant.Client.WebApi/Aphant.Client.WebApi.csproj
@@ -14,6 +14,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Aphant.Core.Interface\Aphant.Core.Interface.csproj" />
+    <ProjectReference Include="..\Aphant.Core.Contract\Aphant.Core.Contract.csproj" />
   </ItemGroup>
 </Project>
