--- a/aphantasia_server/Aphant.Impl.Logic/Aphant.Impl.Logic.csproj
+++ b/aphantasia_server/Aphant.Impl.Logic/Aphant.Impl.Logic.csproj
@@ -1,10 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\Aphant.Core.Interface\Aphant.Core.Interface.csproj" />
+    <ProjectReference Include="..\Aphant.Core.Contract\Aphant.Core.Contract.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions"
+      Version="10.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.2" />
   </ItemGroup>
 
   <PropertyGroup>
