--- a/aphantasia_web/package.json
+++ b/aphantasia_web/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "jose": "^6.1.3",
     "solid-js": "^1.9.9"
   },
   "devDependencies": {
