--- a/aphantasia_web/.env.development
+++ b/aphantasia_web/.env.development
@@ -1,4 +1,5 @@
-VITE_URL=http://192.168.20.49:5001
+# VITE_URL=http://192.168.20.41:5001
+VITE_URL=http://localhost:5000
 VITE_LANGUAGE=en
 VITE_APP_TITLE=Bugfest
 
